--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     tools:context=".Login">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/kk3"
         android:layout_width="854dp"
         android:layout_height="723dp"
         android:scaleType="fitXY"
